# promptpay-rs

./: .gitignore  Cargo.toml  FEATURES.md  README.md  build-wasm.sh  package.json
examples/: advanced-usage.rs  payload.rs  typescript-example.ts  with_qrcode_lib.rs
examples/dioxus/: Cargo.toml  Dioxus.toml
examples/dioxus/assets/: tailwind.css
examples/dioxus/src/: main.rs
examples/sample/: Cargo.toml
examples/sample/src/: main.rs
examples/something/: Cargo.toml
examples/something/src/: main.rs
src/: constants.rs  crc.rs  error.rs  formatter.rs  lib.rs  promptpay.rs  qr_generator.rs  types.rs  utils.rs  validation.rs  wasm.rs
types/: promptpay-rs.d.ts
