[package]
name = "promptpay-rs"
version = "0.5.0"
authors = ["Phumin Maliwan <mantvmass@gmail.com>"]
edition = "2024"
description = "A Rust library for generating PromptPay QR code compliant with EMVCo standards, supporting Thai phone numbers and Tax IDs."
license = "MIT"
repository = "https://github.com/mantvmass/promptpay-rs"
documentation = "https://docs.rs/promptpay-rs"
readme = "README.md"
keywords = ["promptpay", "emvco"]
categories = ["finance"]

[dependencies]

[dev-dependencies]
qrcode = "0.14.1"
