[package]
name = "promptpay-rs-with-dioxus"
version = "0.1.0"
authors = ["Phumin Maliwan <kliop2317@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
dioxus-logger = "0.7.1"
promptpay-rs = { path = "../../"}

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
